- New build switch FASTDEPACK: if passed while building a ROM then the code and data will be depacked using a GPU routine instead of CPU resulting in faster startup times. CONSIDER THIS EXPERIMENTAL FOR NOW - YOU'RE ON YOUR OWN! Buildlink and makerom tools updated to reflect this.
- Fixed graphics importer for the case of 16bit bmp file. Thanks to Saboteur for bringing this up
- Added project background that demonstrates transparent text over 4 different backgrounds
- New command hiscore_sort(table) which sorts tables 0 to 4. Also changed functionality of hiscore_check to hiscore_check(score,name$,table) so it can check tables 0 to 4.
- Added project scoresadvanced that demonstrates the new multiple hiscore tables functionality.
- New raptor.o with multiple score tables. 5 scores tables are supported now.
- Fixed peek() to not issue compiler errors. Also made str$ also compile ok (although it does not function properly)
- Added new project "drawmap" that shows how to store maps in rb+ and draw them to a playfield object from a tile map bitmap object.
- New helper macros xdivs(a,b), xdivu(a,b) will divide a by b (signed or unsigned). Notice that a should be 32bit, b 16bit and the result also 16bit. New helper macros xmuls(a,b), xmulu(a,b) will multiply a with b (signed or unsigned). a and b are 16bit and the result 32bit.
- New rlist members: x_, y_, xadd_, yadd_. These let the programmer access the integer part of the coordinates, so shifting left by 16 is not necessary. Project nyandodge updated to demonstrate this.
- New command powablitlist(pointer_to_blitlist). pointer_to_blitlist contains an array of ints that have A1_BASE, A1_FLAGS, A1_CLIP, A1_PIXEL, A1_STEP_INT, A1_STEP_FRAC, A1_PIXEL_POINTER, A1_INC_INT, A1_INC_FRACT, A2_BASE, A2_FLAGS, A2_PIXEL, A2_STEP, B_COUNT, B_PATD. Terminate the list with a 32bit zero.
- Made all build.bat commands case insensitive.
- Added symbol map output in the build log file.
- Fixed command bcx's SPLIT command.